<resources>
    <string name="app_name">TeamCom</string>

    <!--activity_login_reg-->
    <string name="btnLogin">Login With Email</string>
    <string name="btnRegister">Register With Email</string>
    <string name="btnReset">Reset Password</string>
    <string name="btnCheck">Check Authentication</string>
    <string name="btnShowReg">Create An Account</string>
    <string name="btnShowLogin">Login To Your Account</string>
    <string name="hintLgnEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="hintConfPassword">Confirm Password</string>
    <string name="hintNewPassword">New Password</string>
    <string name="hintFirstname">First Name</string>
    <string name="hintSurname">Surname</string>

    <!--fragment_channels_list-->
    <string name="yourChannels">Your Channels</string>
    <string name="title_activity_channels_list">ChannelsList</string>
    <string name="btnAddNew">Add New</string>

...
